[gd_scene load_steps=3 format=3 uid="uid://b88hs21jecmcs"]

[ext_resource type="Script" path="res://addons/card_engine/editor/searchable_popup_menu.gd" id="1_j0qul"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w1uyf"]
bg_color = Color(0.0901961, 0.141176, 0.184314, 1)

[node name="SearchablePopupMenu" type="Window"]
size = Vector2i(100, 200)
visible = false
wrap_controls = true
transient = true
borderless = true
popup_window = true
script = ExtResource("1_j0qul")

[node name="Panel" type="PanelContainer" parent="."]
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w1uyf")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Items" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_changed" from="Panel/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="Panel/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
